refactor: updating to modern Java
Modernized some code
Turned some if to streamline logic
Deleted useless generics